@@ -8,10 +8,11 @@
          {output, internal},
          {internal_interface, common},
          {hostname, "127.0.0.1"},
+         {port, 5432},
          {username, "cloudi_tests"},
          {password, "cloudi_tests"},
-         {port, 5432},
-         {database, "cloudi_tests"}],
+         {database, "cloudi_tests"},
+         {debug, true}],
         none,
         5000, 5000, 5000, undefined, undefined, 1, 5, 300, []},
     {internal,
@@ -21,10 +22,11 @@
          {output, internal},
          {internal_interface, common},
          {hostname, "127.0.0.1"},
+         {port, 5432},
          {username, "cloudi_tests"},
          {password, "cloudi_tests"},
-         {port, 5432},
-         {database, "cloudi_tests"}],
+         {database, "cloudi_tests"},
+         {debug, true}],
         none,
         5000, 5000, 5000, undefined, undefined, 1, 5, 300, []}
 ]}.
